# open-wearables

./: .pre-commit-config.yaml  Makefile  docker-compose.yml
backend/app/repositories/: data_point_series_repository.py  event_record_detail_repository.py  event_record_repository.py  repositories.py
backend/app/schemas/: __init__.py  common_types.py
backend/app/schemas/suunto/: workout_import.py
backend/app/services/: __init__.py  event_record_service.py  summaries_service.py
backend/app/services/providers/polar/: workouts.py
backend/app/services/providers/suunto/: workouts.py
backend/app/services/providers/whoop/: oauth.py  strategy.py
backend/mcp/: __main__.py  server.py
backend/mcp/tools/: __init__.py  analytics.py  sleep.py
backend/mcp_server/: __main__.py  server.py
backend/mcp_server/tools/: __init__.py  timeseries.py  workouts.py
backend/scripts/init/: seed_activity_data.py
backend/scripts/start/: mcp.sh
backend/tests/api/v1/: test_garmin_webhooks.py
docs/: docs.json
mcp/: README.md
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/scripts/: start.sh
mcp-server/src/open_wearables_mcp/: __init__.py  __main__.py  server.py
mcp-server/src/open_wearables_mcp/tools/: __init__.py
mcp/app/: main.py  prompts.py
mcp/app/tools/: sleep.py
